<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@color/sys_bg">

    <LinearLayout
        android:id="@+id/DataSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/data_bg"
        android:baselineAligned="false"
        android:layout_margin="5dp"
        android:padding="5dp">
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_continuous_days"
                android:textStyle="bold"
                android:textSize="15sp"/>
            
            <TextView
                android:id="@+id/TextContinuousDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"/>
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_reduce_week"
                android:textStyle="bold"
                android:textSize="15sp"/>
            
            <TextView
                android:id="@+id/TextReduceWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"/>
            
        </LinearLayout>
	
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_reduce_month"
                android:textStyle="bold"
                android:textSize="15sp"/>
            
            <TextView
                android:id="@+id/TextReduceMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"/>
            
        </LinearLayout>
    
	</LinearLayout>
	    
	<ListView
		android:id="@+id/WeightDataListView"
		android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
